--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "code",
+  "name": "portfolio",
   "version": "0.1.0",
+  "author": "Aman Singh",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -14,7 +15,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
-    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^4.2.21",
     "react-type-animation": "^3.1.0",
